test/conformance/chainsaw/image-validating-policies/context/imagedata/image-data-arch/pod-good.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-good
  labels:
    app: busybox
spec:
  containers:
  - name: busybox
    image: mirror.gcr.io/library/busybox:latest
